Add stylesheet link to index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <base href="/" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  <link rel="stylesheet" href="index.css">
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
@@ -23,12 +24,10 @@
     "@angular/common/http": "https://next.esm.sh/@angular/common@^20.3.10/http?external=rxjs",
     "@angular/core": "https://next.esm.sh/@angular/core@^20.3.10?external=rxjs",
     "@angular/common": "https://next.esm.sh/@angular/common@^20.3.10?external=rxjs",
-    "@google/generative-ai": "https://next.esm.sh/@google/generative-ai@^0.24.1?external=rxjs",
     "@google/genai": "https://next.esm.sh/@google/genai@^1.29.0?external=rxjs"
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
 </head>
 <body class="bg-pink-50 text-gray-800">
   <app-root></app-root>
